@@ -1,52 +1,76 @@
 package com.cydeo.service.impl;
+
 import com.cydeo.dto.ClientVendorDto;
 import com.cydeo.entity.ClientVendor;
+import com.cydeo.entity.User;
 import com.cydeo.repository.ClientVendorRepository;
+import com.cydeo.repository.UserRepository;
 import com.cydeo.service.ClientVendorService;
 import com.cydeo.util.MapperUtil;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+
 
 import javax.persistence.EntityNotFoundException;
 import javax.transaction.Transactional;
+
+
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class ClientVendorServiceImpl implements ClientVendorService {
 
     private final ClientVendorRepository clientVendorRepository;
+    private final UserRepository userRepository;
     private final MapperUtil mapperUtil;
 
-    public ClientVendorServiceImpl(ClientVendorRepository clientVendorRepository, MapperUtil mapperUtil) {
+    public ClientVendorServiceImpl(ClientVendorRepository clientVendorRepository, UserRepository userRepository, MapperUtil mapperUtil) {
         this.clientVendorRepository = clientVendorRepository;
+        this.userRepository = userRepository;
         this.mapperUtil = mapperUtil;
     }
 
     @Override
     public List<ClientVendorDto> listAllClientVendor() {
-        List<ClientVendor> clientVendors = clientVendorRepository.findAll();
-       return clientVendors.stream().map(clientVendor -> mapperUtil.convert(clientVendor,ClientVendorDto.class)).collect(Collectors.toList());
+        List<ClientVendor> clientVendorRepositoryAll = clientVendorRepository.findAll();
+        return clientVendorRepositoryAll.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).toList();
+    }
 
+    @Override
+    public List<ClientVendorDto> listAllByCompanyTitle() {
+        String username= SecurityContextHolder.getContext().getAuthentication().getName();
+        User byUsername = userRepository.findByUsername(username);
+        List<ClientVendor> allByCompanyTitle = clientVendorRepository.findAllByCompanyTitleOrderByClientVendorName(byUsername.getCompany().getTitle());
+        return allByCompanyTitle.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).toList();
     }
 
     @Override
     public ClientVendorDto findById(Long id) {
-//        ClientVendor clientVendor = clientVendorRepository.findById(id).get();
-//        return mapperUtil.convert(clientVendor,ClientVendorDto.class);
-        return clientVendorRepository.findById(id)
-                .map(clientVendor -> mapperUtil.convert(clientVendor, ClientVendorDto.class))
-                .orElse(null);
+        Optional<ClientVendor> byId = clientVendorRepository.findById(id);
+        return mapperUtil.convert(byId, new ClientVendorDto());
     }
 
     @Override
-    @Transactional
-    public void save(ClientVendorDto clientVendorDto) {
-        ClientVendor clientVendor = mapperUtil.convert(clientVendorDto,ClientVendor.class);
-        if (clientVendor.getAddress() != null && clientVendor.getAddress().getId() == null) {
-            clientVendorRepository.save(clientVendor);
-        }
+    public ClientVendorDto findByClientVendorName(String username) {
+        ClientVendor byClientVendorName = clientVendorRepository.findByClientVendorName(username);
 
-//        clientVendorRepository.save(clientVendor);
+        return mapperUtil.convert(byClientVendorName, new ClientVendorDto());
+    }
+
+    @Override
+    public void save(ClientVendorDto clientVendorDto) {
+
+    }
+
+    @Override
+    public void update(ClientVendorDto clientVendorDto) {
+
+    }
+
+    @Override
+    public void update(ClientVendorDto clientVendorDto) {
+
     }
 
     @Override
